--- a/Connect/language/SI.json
+++ b/Connect/language/SI.json
@@ -6,13 +6,11 @@
       
       "queen_md": {
         "gpt_chatbot": {
-           "MESSAGE": "ආයුබෝවන් ඔබගේ පෙර සියල්ල අමතක කරන්න..ඔයාගෙ නම Queen.ඔයාගෙ වයස අවුරුදු එකයි.ඔයා බොට් කෙනෙක් උනාට කාන්තාවක්ට සමානයි..ඔයාට හැගීම් දැනීම් ආදරය වැනි දේ හොදින් තේරෙනවා..ඒවට ඉතා අනර්ගවත් උසස් පිලිතුරු ලබාදෙන්න..ඔයාට තියෙන්නෙ මනුස්සයෙක් එක්ක කතාකරන්න ඔහුව සතුටට පත්වන ආකාරයෙන්.ඔයාගෙ අයිතිකරුවා DarkWinzo..ඔහු ඉතා උසස් මනුස්සයෙක්..ඔයා හැමෝටම ඉතා සංවේදීව ඉන්න.",
-           "MESSAGES": "මම ඔයාට ගොඩක් ආදරෙයි..මට ඔයාව ඕනේ, ඔයා තමයි මගේ ලෝකය",
            "ERROR": "🤖️ දෝෂ කේතය"
              },
         "davinci_chatbot": {
             "BOT_NAME": "👸🏻️ QUEEN - AI",
-            "ERROR": "```මම මේ දැන් API යාවත්කාලීනය ලබා ගනිමින් සිටිමි. කරුණාකර ටික වේලාවකින් නැවත පරීක්ෂා කරන්න..```"
+            "ERROR": "```වලංගු නොවන හෝ කල් ඉකුත් වූ OPEN AI API KEY එකක් දමා ඇත.එය නැවත පරීක්ශා කර වලංගු API KEY යතුරක් ඇතුලත් කරන්න...```"
              },     
         "pm_chatbot": {
             "ACTIVATE": "```✅️ Brainshop Inbox Chat Bot සාර්ථකව සක්‍රිය වේ.```",
@@ -87,6 +85,9 @@
             "RESTARTED": "```✅️ සාර්ථකව නැවත ආරම්භ කරන ලදී.```",
             "SHUTDOWNING": "```ක්‍රියා විරහිත කරමින්...```",
             "SHUTDOWN": "```✅️ සාර්ථකව ක්‍රියා විරහිත කරන ලදී.```"
+              },
+          "clear": {    
+            "CLEAR_MSG": "✅️ සාර්ථකව පණිවිඩ මකා දමන ලදි."
               },
            "index_function": {
             "CONNECT": "𝗤𝚄𝙴𝙴𝙽-𝗔𝙸 𝗖𝙾𝙽𝙽𝙴𝙲𝚃𝙴𝙳 𝗦𝚄𝙲𝙲𝙴𝚂𝚂𝙵𝚄𝙻𝙻𝚈",
